# pyr

./: LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
games/chicago_noir/: game.json
games/demo/: game.json
pyr/: __init__.py
pyr/cli/: main.py
pyr/generator/: __init__.py  asset_manifest.py  narrative.py  pipeline.py  prompts.py
pyr/models/: __init__.py  assets.py  game.py
pyr/pipeline/: __init__.py  packager.py  tester.py  validator.py
pyr/runtime/: __init__.py  engine.py  renderer.py  state_manager.py
tests/: test_models.py  test_pipeline.py  test_runtime.py
